--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,7 +47,7 @@ const socialProfileLinks = CONTENT.footer.connect.links
       gtag('js', new Date());
       gtag('config', 'G-W4K3Z0TPD8');
     </script>
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" sizes="any" href="/favicon.svg" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
